--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-banner-carousel": "^1.0.3",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
