--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
+    "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-banner-carousel": "^1.0.3",
